--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: regreplace
-Title: String Matching and Replace Named Groups in Regular Expressions
+Title: Match And Replace Strings Based On  Named Groups in Regular Expressions
 Language: en-US
 Version: 0.1.0
 Date: 2024-09-05
@@ -8,8 +8,10 @@ Authors@R:
            email =  "gwang.jin.kim.phd@gmail.com", 
            role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-2753-0883"))
-Author: Gwang-Jin Kim [aut, cre] (ORCID: <https://orcid.org/0000-0002-2753-0883>) 
-Description: Provides functions to match and replace strings based on named groups in regular expressions.
+Author: Gwang-Jin Kim [aut, cre] (<https://orcid.org/0000-0002-2753-0883>) 
+Description: A R6 Class Regreplacer takes a regex pattern containing named groups. 
+    It helps to easily retrieve the matched portion by the group name.
+    And even to replace the matched portiion of the string by the group name.
 Suggests: rmarkdown, knitr
 VignetteBuilder: knitr
 License: MIT + file LICENSE
