--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,9 +9,9 @@ Authors@R:
            role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-2753-0883"))
 Author: Gwang-Jin Kim [aut, cre] (<https://orcid.org/0000-0002-2753-0883>) 
-Description: A R6 Class Replacer takes a regex pattern containing named groups. 
-    It helps to easily retrieve the matched portion by the group name.
-    And even to replace the matched portiion of the string by the group name.
+Description: An R6 class "Replacer" provided by the package simplifies working with
+    regex patterns containing named groups. It allows easy retrieval of matched portions
+    and targeted replacements by group name, improving both code clarity and maintainability. 
 URL: https://github.com/gwangjinkim/regreplaceR
 Suggests: rmarkdown, knitr
 VignetteBuilder: knitr
